--- a/app/globals.css
+++ b/app/globals.css
@@ -2,3 +2,31 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer components {
+
+  /* generals */
+  .general-font-size {
+    font-size: 16px;
+  }
+  .secondary-font-color {
+    color: #938D8D;
+  }
+  .transition-custom {
+    @apply transition duration-1000 ease-out;
+  }
+
+  /* nav */
+  .lang-selected {
+    @apply text-[#FF5C00] transition duration-400 ease-out;
+  }
+
+  .me-hover {
+    @apply w-7/12 md:w-[70%] xl:w-[50%];
+  }
+
+  /* home  w-7/12 md:w-[70%] xl:w-[50%]*/
+  .bg-home {
+    background-color: #362B56;
+  }
+
+}
