--- a/app/components/Navs/style.module.css
+++ b/app/components/Navs/style.module.css
@@ -48,6 +48,6 @@
 .social-links:hover {
   color: #ffffff;
   transform: translateY(-2px);
-  border-bottom: solid white 1px;
+  border-bottom: solid transparent 1px;
   transition: all 300ms ease;
 }
