--- a/app/globals.css
+++ b/app/globals.css
@@ -49,7 +49,7 @@ header ul {
     @apply transition duration-1000 ease-out;
   }
 
-  nav
+  /* nav */
   .lang-selected {
     @apply text-[#FF5C00] transition duration-400 ease-out;
   }
@@ -69,4 +69,12 @@ header ul {
     color: #362B56;
   }
 
+  /* project */
+  .card-container {
+    @apply w-[90%] md:w-[30%] h-[300px] my-4 rounded-xl bg-cover bg-center
+  }
+
+  .card {
+    @apply ease-in-out w-full h-full flex flex-col rounded-xl justify-between items-center text-center opacity-0 hover:opacity-100 
+  }
 }
