dashboard desing ready 2023-12-30

--- a/app/(dashboard)/globals.css
+++ b/app/(dashboard)/globals.css
@@ -1,3 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+@layer components {
+  .transition-custom {
+    @apply transition-all duration-1000 ease-out;
+  }
+}
